[package]
name = "move-bytecode-verifier-analyzer"
version = "0.0.1"
authors = ["The Move Contributors"]
publish = false
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.52"
clap = { version = "4", features = ["derive"] }

move-binary-format = { git = "https://github.com/MystenLabs/sui/", rev = "30006ca" }
move-bytecode-verifier = { git = "https://github.com/MystenLabs/sui/", rev = "30006ca" }
move-bytecode-verifier-meter = { git = "https://github.com/MystenLabs/sui/", rev = "30006ca" }
move-command-line-common = { git = "https://github.com/MystenLabs/sui/", rev = "30006ca" }
move-core-types = { git = "https://github.com/MystenLabs/sui/", rev = "30006ca" }
move-vm-config = { git = "https://github.com/MystenLabs/sui/", rev = "30006ca" }

[features]
default = []

[[bin]]
name = "move-bytecode-verifier-analyzer"
path = "bin/main.rs"
